# django-startproject

./: .coveragerc  .dockerignore  .editorconfig  .env-dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.web  Dockerfile.worker  LICENSE  Pipfile  README.md  compose-entrypoint.sh  compose.override.yml  compose.override.yml-dist  compose.yml  conftest.py-tpl  docker-compose.yml  justfile  pyproject.toml  pytest.ini  requirements.in  requirements.txt  start-dev.sh  start-tailwind.sh  start-web.sh  start-worker.sh
.github-tpl/workflows/: actions.yml
.github/workflows/: actions.yml
config/: settings.py-tpl  test_settings.py-tpl  urls.py-tpl  wsgi.py-tpl
config/tests/: test_file.py
project_template/: .coveragerc  .envrc-tpl  Dockerfile  Pipfile  Procfile  docker-compose.yml  pytest.ini  requirements.in  requirements.txt
project_template/config/: settings.py-tpl  test_settings.py-tpl  urls.py-tpl
project_template/tests/: test_file.py
requirements/: requirements.in  requirements.txt
